crates/aprender-train/tests/snapshots/tui_snapshot_test__tui_error_state.snap
---
source: tests/tui_snapshot_test.rs
expression: rendered
---
════════════════════════════════════════════════════════════════════════════════
ENTRENAR  ● FAIL  00:01:00 Qwen2.5-Coder-0.5B  30 tok/s
────────────────────────────────────────────────────────────────────────────────
Epoch  5/15 ██████░░░░░░░░░░░░░░  33%    Step  8/16 ██████████░░░░░░░░░░  50%
Loss 15.0000 ↑  Best 5.0000  LR 0.000600  Grad 1000.00  ETA 00:02:20
────────────────────────────────────────────────────────────────────────────────
Loss History: ⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿ [5.00 - 15.00]
────────────────────────────────────────────────────────────────────────────────
GPU: NVIDIA GeForce RTX 4  Util █████░░░░░░░░░░  35%  Temp 45°C  Power 110W
VRAM: █░░░░░░░░░░░░░░   9%  2.1G / 24G
────────────────────────────────────────────────────────────────────────────────
Epoch  Loss  Min  Max  LR  Trend
    1    7.4833    5.0000   15.0000    0.000600       
────────────────────────────────────────────────────────────────────────────────
Config: AdamW  Batch: 4  Checkpoint: ./experiments/test/checkpoints
════════════════════════════════════════════════════════════════════════════════
