crates/aprender-train/tests/snapshots/tui_snapshot_test__tui_initial_state.snap
---
source: tests/tui_snapshot_test.rs
expression: rendered
---
════════════════════════════════════════════════════════════════════════════════
ENTRENAR  ● Running  00:01:00 Qwen2.5-Coder-0.5B  30 tok/s
────────────────────────────────────────────────────────────────────────────────
Epoch  1/15 █░░░░░░░░░░░░░░░░░░░   7%    Step  1/16 █░░░░░░░░░░░░░░░░░░░   6%
Loss 6.9000 ↓  Best 5.0000  LR 0.000600  Grad 2.50  ETA 03:59:00
────────────────────────────────────────────────────────────────────────────────
Loss History: ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶⣤⣤⣤⣤⣤⣤⣤⣤⣤⣤⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿ [5.00 - 6.90]
────────────────────────────────────────────────────────────────────────────────
GPU: NVIDIA GeForce RTX 4  Util █████░░░░░░░░░░  35%  Temp 45°C  Power 110W
VRAM: █░░░░░░░░░░░░░░   9%  2.1G / 24G
────────────────────────────────────────────────────────────────────────────────
Epoch  Loss  Min  Max  LR  Trend
    1    6.1333    5.0000    6.9000    0.000600       
────────────────────────────────────────────────────────────────────────────────
Config: AdamW  Batch: 4  Checkpoint: ./experiments/test/checkpoints
════════════════════════════════════════════════════════════════════════════════
