crates/aprender-train/tests/snapshots/tui_snapshot_test__tui_mid_training.snap
---
source: tests/tui_snapshot_test.rs
expression: rendered
---
════════════════════════════════════════════════════════════════════════════════
ENTRENAR  ● Running  00:01:00 Qwen2.5-Coder-0.5B  30 tok/s
────────────────────────────────────────────────────────────────────────────────
Epoch  8/15 ██████████░░░░░░░░░░  53%    Step 10/16 ████████████░░░░░░░░  62%
Loss 4.2000 ↓  Best 4.2000  LR 0.000600  Grad 2.50  ETA 00:00:58
────────────────────────────────────────────────────────────────────────────────
Loss History: ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶⣤⣤⣤⣤⣤⣤⣤⣤⣤⣤⣤⣤⣤⣤⣤⣤⣤⣤⣤⣤⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀ [4.20 - 6.90]
────────────────────────────────────────────────────────────────────────────────
GPU: NVIDIA GeForce RTX 4  Util █████░░░░░░░░░░  35%  Temp 45°C  Power 110W
VRAM: █░░░░░░░░░░░░░░   9%  2.1G / 24G
────────────────────────────────────────────────────────────────────────────────
Epoch  Loss  Min  Max  LR  Trend
    1    5.6833    4.2000    6.9000    0.000600       
────────────────────────────────────────────────────────────────────────────────
Config: AdamW  Batch: 4  Checkpoint: ./experiments/test/checkpoints
════════════════════════════════════════════════════════════════════════════════
