crates/aprender-train/tests/snapshots/tui_snapshot_test__tui_no_gpu.snap
---
source: tests/tui_snapshot_test.rs
expression: rendered
---
════════════════════════════════════════════════════════════════════════════════
ENTRENAR  ● Running  00:01:00 Qwen2.5-Coder-0.5B  30 tok/s
────────────────────────────────────────────────────────────────────────────────
Epoch  3/15 ████░░░░░░░░░░░░░░░░  20%    Step  5/16 ██████░░░░░░░░░░░░░░  31%
Loss 5.5000 ↓  Best 5.0000  LR 0.000600  Grad 2.50  ETA 00:05:29
────────────────────────────────────────────────────────────────────────────────
Loss History: ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶⣤⣤⣤⣤⣤⣤⣤⣤⣤⣤⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣤⣤⣤⣤⣤⣤⣤⣤⣤⣤ [5.00 - 6.90]
────────────────────────────────────────────────────────────────────────────────
GPU: N/A
────────────────────────────────────────────────────────────────────────────────
Epoch  Loss  Min  Max  LR  Trend
    1    5.9000    5.0000    6.9000    0.000600       
────────────────────────────────────────────────────────────────────────────────
Config: AdamW  Batch: 4  Checkpoint: ./experiments/test/checkpoints
════════════════════════════════════════════════════════════════════════════════
